Update project files: modified PHP scripts, styles, added new reports, removed old files

--- a/backup_working_files/roles/reports.html
+++ b/backup_working_files/roles/reports.html
@@ -80,7 +80,7 @@
 	<div class="box">
             <img src="/images/img1.png" alt="Report Image">
 	    <a href="HRIO.php" target="_blank" style="display: inline-block; padding: 10px 20px; background-color: #00338D; color: white; text-decoration: none;">
-            HRIO Report
+            WDF Report
 	    </a>
         </div>
         
